fix: a11y ensure correct color contrast for green/red texts/charts

--- a/css/partials/_variables.scss
+++ b/css/partials/_variables.scss
@@ -10,6 +10,7 @@ $border-color: #c5c7c9;
 $bg-light: #f2f7fc;
 $bg-dark: var(--bs-dark);
 
-$success: #3c825c;
+$success: #5cc98d;
+$success-text: #3c825c;
 $warning: #976700;
-$error: #bc4050;
+$error: #b42d43;
